# community-voting-backend

./: Cargo.toml  Dockerfile  config.toml  docker-compose.yaml  justfile
src/: config.rs  data.rs  doc.rs  error.rs  main.rs  server.rs
src/server/: routes.rs
src/server/routes/: vote.rs
