[package]
name = "community-voting-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
dotenvy = { version = "0.15.*" }

anyhow = "1.0.97"

serde = { version = "1.0.*", features = ["std", "derive"] }
serde_json = { version = "1.0.*" }

tokio = { version = "1.44", features = ["full"] }

axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

tower = "0.5.2"
tower-http = { version = "0.6.2", features = [ "cors", "validate-request" ] }

utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
toml = { version = "0.8.*" }

reqwest = { version = "0.12.15", features = ["json"] }

base16 = "0.2.1"
